fixed overflow and merged develop

--- a/portlets/contenteditor-portlet/src/main/webapp/css/main.css
+++ b/portlets/contenteditor-portlet/src/main/webapp/css/main.css
@@ -326,4 +326,4 @@ span.ontology-term-label {
 #tree-view{width:350px}
 #saveArticle{cursor:pointer}
 #articleURL{overflow:hidden}
-#anchorArticleURL{display: block; width:0px;}
+#anchorArticleURL{display: block; width:0px; white-space: nowrap;}
